--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -1,22 +1,22 @@
 @import 'vars';
-@import 'mixins';
+// // @import 'mixins';
 
 html {
-  margin: 0 20px;
+  font-family: 'Roboto', sans-serif;
 }
 
-body {
-  @include background-size(cover);
+// body {
+//   @include background-size(cover);
 
-  background-color: $off-white;
-  background-size: cover;
-  text-align: center;
-  width: 100%;
-}
+//   background-color: $off-white;
+//   background-size: cover;
+//   text-align: center;
+//   width: 100%;
+// }
 
-// -------------------------------------------------------------------------------------------------
-// PARALLAX IMAGE SCROLLING
-// -------------------------------------------------------------------------------------------------
+// // -------------------------------------------------------------------------------------------------
+// // PARALLAX IMAGE SCROLLING
+// // -------------------------------------------------------------------------------------------------
 .parallax {
   background-attachment: fixed;
   background-position: center;
@@ -24,10 +24,10 @@ body {
   background-size: cover;
 }
 
-// -------------------------------------------------------------------------------------------------
-// LANDING PAGE STYLING
-// -------------------------------------------------------------------------------------------------
-.landing-page {
-  margin: 5vw auto;
-  width: 80%;
-}
+// // -------------------------------------------------------------------------------------------------
+// // LANDING PAGE STYLING
+// // -------------------------------------------------------------------------------------------------
+// .landing-page {
+//   margin: 5vw auto;
+//   width: 80%;
+// }
