--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -1,26 +1,26 @@
-// -------------------------------------------------------------------------
-// TYPOGRAPHY
-// -------------------------------------------------------------------------
+// // -------------------------------------------------------------------------
+// // TYPOGRAPHY
+// // -------------------------------------------------------------------------
 
-// -------------------------------------------------------------------------
-// COLORS
-// -------------------------------------------------------------------------
-$off-white: rgb(250, 250, 250);
+// // -------------------------------------------------------------------------
+// // COLORS
+// // -------------------------------------------------------------------------
+// $off-white: rgb(250, 250, 250);
   
-// -------------------------------------------------------------------------
-// MEDIA QUERIES
-// -------------------------------------------------------------------------
+// // -------------------------------------------------------------------------
+// // MEDIA QUERIES
+// // -------------------------------------------------------------------------
 
-// Small tablets and large smartphones (landscape view)
-$screen-sm-min: 320px;
-$screen-sm-max: 767px;
+// // Small tablets and large smartphones (landscape view)
+// $screen-sm-min: 320px;
+// $screen-sm-max: 767px;
 
-// Small tablets (portrait view)
-$screen-md-min: 768px;
-$screen-md-max: 991px;
+// // Small tablets (portrait view)
+// $screen-md-min: 768px;
+// $screen-md-max: 991px;
 
-// Tablets and small desktops
-$screen-lg-min: 992px;
+// // Tablets and small desktops
+// $screen-lg-min: 992px;
 
-// Large tablets and desktops
-$screen-xl-min: 1200px;
+// // Large tablets and desktops
+// $screen-xl-min: 1200px;
