updated font to lato, edited main html top margin to account for header

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -10,13 +10,13 @@
 
 }
 
-.main-section {
-  margin-top: 50px;
+// .main-section {
+//   margin-top: 50px;
 
-}
+// }
 
 nav {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Lato', sans-serif;
   text-align: right;
   padding-right: 10%;
   // background: green;
@@ -53,7 +53,6 @@ section {
   h2 {
     margin: auto, auto;
     font-size: 48px;
-    font-family: Arial, Helvetica, sans-serif
   }
 
   h3 {
