--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -2,7 +2,8 @@
 // // @import 'mixins';
 
 html {
-  font-family: 'Roboto', sans-serif;
+  margin-top: 50px;
+  font-family: 'Lato', sans-serif;
 }
 
 // body {
