smooth scroll added for anchor links, and added footer

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -10,10 +10,13 @@
 
 }
 
-// .main-section {
-//   margin-top: 50px;
-
-// }
+.footer {
+  height: 150px;
+  background-color: black;
+    p {
+      margin-top: 0;
+    }
+}
 
 nav {
   font-family: 'Lato', sans-serif;
