initial about me and project pics added

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -22,7 +22,6 @@ nav {
   font-family: 'Lato', sans-serif;
   text-align: right;
   padding-right: 10%;
-  // background: green;
 
   a {
     display: inline-block;
@@ -40,12 +39,23 @@ nav {
   width: 100%;
 }
 section {
-  height: 450px;
+  min-height: 450px;
   width: 100%;
   background-color: blue;
+  padding-top: 20px;
+  text-align: center;
+  overflow: auto;
 
   h2 {
     margin-top: 0;
+  }
+
+  img {
+    max-height: 150px;
+  }
+
+  img:hover {
+    opacity: .75;
   }
 }
 
@@ -69,15 +79,29 @@ section {
 
 #about {
   background: green;
-  padding-top: 50px;
+
+  div {
+    display: inline-block;
+    width: 50%;
+  }
+  
+  p {
+    padding: 0 40px;
+  }
 }
 
 #projects {
   background: yellow;
-  padding-top: 50px;
+
+  div {
+    display: inline-block;
+    min-width: 25%;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  
 }
 
 #contact {
   background: orange;
-  padding-top: 50px;
 }
