--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -6,8 +6,7 @@
   top: 0;
   width: 100%;
   height: 50px;
-  background: red;
-
+  background: $dark-slate;
 }
 
 .footer {
@@ -30,7 +29,7 @@ nav {
   }
 
   p {
-    color: black;
+    color: $off-white;
   }
 
 }
@@ -39,7 +38,6 @@ nav {
   width: 100%;
 }
 section {
-  min-height: 450px;
   width: 100%;
   background-color: blue;
   padding-top: 20px;
@@ -60,38 +58,65 @@ section {
 }
 
 #intro {
-  background: blue;
+  background-image: url('../../assets/mt-rainier1.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;  
+  min-height: 200px;
   text-align: center;
-  padding-top: 200px;
+  padding-top: 5%;
   h2 {
     margin: auto, auto;
-    font-size: 48px;
+    font-size: 2em;
   }
 
   h3 {
-    font-size: 32px;
+    font-size: 1.5em;
   }
 
   h4 {
-    font-size: 24px;
+    font-size: 1.25em;
+    line-height: 25%;
+  }
+
+  @media (min-width: 660px) {
+    height: 300px;
+  }
+
+  @media (min-width: 900px) {
+      height: 350px;
   }
 }
 
 #about {
-  background: green;
-
-  div {
-    display: inline-block;
-    width: 50%;
-  }
+  background: $dark-slate;
+  color: $off-white;
+  min-height: 350px;
   
   p {
-    padding: 0 40px;
+    padding: 0 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: none;
+    text-align: left;
+  }
+
+  #about-block {
+    vertical-align: middle;
+    display: inline-block;
+
+    #img-div {
+      float: left;
+      clear: both;
+      max-width: 30%;
+      padding: 30px 30px 30px 30px;
+    }
+    img {
+      border-radius: 25%;
+    }
   }
 }
 
 #projects {
-  background: yellow;
+  background: $light-blue;
 
   div {
     display: inline-block;
