--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -5,7 +5,12 @@
 // // -------------------------------------------------------------------------
 // // COLORS
 // // -------------------------------------------------------------------------
-// $off-white: rgb(250, 250, 250);
+$off-white: rgb(250, 250, 250);
+$med-blue: rgb(103, 151, 199);
+$light-blue: #93ACCC;
+$dark-blue: #345C84;
+$lavender-blue: #D3E6F7;
+$dark-slate: #25374E;
   
 // // -------------------------------------------------------------------------
 // // MEDIA QUERIES
