styling to portfolio cards, extracted header

--- a/src/style/_vars.scss
+++ b/src/style/_vars.scss
@@ -7,10 +7,11 @@
 // // -------------------------------------------------------------------------
 $off-white: rgb(250, 250, 250);
 $med-blue: rgb(103, 151, 199);
-$light-blue: #93ACCC;
-$dark-blue: #345C84;
-$lavender-blue: #D3E6F7;
-$dark-slate: #25374E;
+$light-blue: rgb(191, 205, 223);
+$dark-blue: rgb(52, 92, 132);
+$lavender-blue: rgb(211, 230, 247);
+$dark-slate: rgb(37, 55, 78);
+$card-back: rgb(69, 165, 149);
   
 // // -------------------------------------------------------------------------
 // // MEDIA QUERIES
