--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -50,7 +50,7 @@ nav {
 }
 section {
   width: 100%;
-  background-color: blue;
+  background-color: $dark-slate;
   padding-top: 20px;
   text-align: center;
   overflow: auto;
@@ -61,10 +61,6 @@ section {
 
   img {
     max-height: 150px;
-  }
-
-  img:hover {
-    opacity: .75;
   }
 }
 
@@ -95,12 +91,12 @@ section {
   }
 
   @media (min-width: 900px) {
-      height: 350px;
+      height: 400px;
   }
 }
 
 #about {
-  background: $dark-slate;
+  background: rgba(52, 92, 132, .9);
   color: $off-white;
   min-height: 350px;
   
@@ -117,30 +113,65 @@ section {
 
   #about-block {
     vertical-align: middle;
-    display: inline-block;
 
-    #img-div {
-      float: left;
-      clear: both;
-      max-width: 30%;
-      padding: 30px 30px 30px 30px;
-    }
+
     img {
       border-radius: 25%;
     }
+
+    @media (min-width: 420px) {
+      display: inline-block;
+      #img-div {
+        float: left;
+        clear: both;
+        max-width: 30%;
+        padding: 30px 30px 30px 30px;
+      }
+    }
+    
   }
 }
 
-#projects {
+#portfolio {
   background: $light-blue;
   color: $off-white;
+  padding-bottom: 20px;
+  padding-top: 30px;
+
+  .divider {
+    margin-bottom: 25px;
+  }
+
+  .card {
+    border: 1px solid rgb(204, 204, 204);
+    border-radius: 5px;
+    margin-bottom: 20px;
+    background-color: $med-blue;
+    opacity: .75;
+    box-shadow: 10px 10px 10px $dark-blue;
+    overflow: auto;
+    min-width: 250px;
+  }
+  
+  .card:hover {
+    opacity: 1;
+  }
 
   a:hover {
     color: $dark-blue;
   }
 
+  h2 {
+    color: $dark-slate;
+  }
+
   h4 {
     font-size: 1.5em;
+    margin-bottom: 20px;
+  }
+
+  p {
+    margin: 10px 5px;
   }
 
   div {
