--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -5,6 +5,7 @@
   color: $off-white;
   padding-bottom: 20px;
   padding-top: 30px;
+  text-align: center;
 
   .divider {
     margin-bottom: 25px;
@@ -19,6 +20,7 @@
     box-shadow: 10px 10px 10px $dark-blue;
     overflow: auto;
     min-width: 240px;
+    text-align: center;
   }
   
   .card:hover {
@@ -57,4 +59,99 @@
     border-radius: 10%;
   }
   
+}
+
+// ------------------
+// Modal CSS
+// ------------------
+
+@import '../../style/vars';
+
+.modal {
+  position: fixed;
+  top: 30;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $off-white;
+  // text-align: center;
+  z-index: 999;
+
+  .modal-main {
+    position: fixed;
+    top: 10%;
+    left: 8.5%;
+    // transform: translate(-50%, -50%);
+    background: $med-blue;
+    width: 80%;
+    max-height: 600px;
+    min-height: 400px;
+    padding: 20px;
+    border: 2px solid white;
+    border-radius: 10px;
+    box-shadow: 10px 10px 10px $dark-blue;
+    align-items: center;
+    // text-align: center;
+    h2 {
+      color: $off-white !important;
+    }
+
+    h4 {
+      margin: 0;
+      padding: 0;
+      color: $off-white;
+      text-align: left;
+    }
+
+    h5 {
+      font-size: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    a {
+      text-decoration: underline;
+    }
+
+    img {
+      float: left;
+      clear: both;
+      width: 90%;
+      height: auto;
+      margin: 10px;
+    }
+
+    @media (min-width: 680px) {
+      img{
+        width: 400px;
+        height: auto;
+      }
+    }
+  
+    @media (min-width: 850px) {
+      img{
+        width: 500px;
+        height: auto;
+      }
+    }
+  }
+
+  .modal-button {
+    float: right;
+    margin: 5px;
+    padding: 5px 10px;
+  }
+}
+
+.display-block {
+  display: block;
+}
+.display-none {
+  display: none !important;
+}
+
+.discription {
+  text-align: left !important;
 }
