more details on projects added and styling tweaks for modals

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -24,6 +24,10 @@
       border-radius: 25%;
     }
 
+    #img-div {
+      text-align: center;
+    }
+
     @media (min-width: 420px) {
       display: inline-block;
       #img-div {
