--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -68,22 +68,23 @@
 @import '../../style/vars';
 
 .modal {
+  // box-sizing: border-box;
   position: fixed;
-  top: 30;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
   background: $off-white;
-  // text-align: center;
+  text-align: center;
   z-index: 999;
 
   .modal-main {
     position: fixed;
     top: 10%;
-    left: 8.5%;
+    left: 0;
     // transform: translate(-50%, -50%);
     background: $med-blue;
-    width: 80%;
+    width: 90%;
     max-height: 600px;
     min-height: 400px;
     padding: 20px;
@@ -91,16 +92,16 @@
     border-radius: 10px;
     box-shadow: 10px 10px 10px $dark-blue;
     align-items: center;
-    // text-align: center;
+    text-align: center;
+    overflow: scroll;
     h2 {
       color: $off-white !important;
     }
 
     h4 {
-      margin: 0;
+      margin: 0 auto;
       padding: 0;
       color: $off-white;
-      text-align: left;
     }
 
     h5 {
@@ -108,7 +109,9 @@
     }
 
     p {
+      margin-top: 20px !important;
       font-size: 16px;
+      text-align: left !important;
     }
 
     a {
@@ -120,7 +123,7 @@
       clear: both;
       width: 90%;
       height: auto;
-      margin: 10px;
+      margin: 20px;
     }
 
     @media (min-width: 680px) {
@@ -154,4 +157,13 @@
 
 .discription {
   text-align: left !important;
+}
+
+.project-links {
+  width: 100%;
+  h4 {
+    display: inline-block !important;
+    margin-left: 20px !important;
+    margin-right: 20px !important;
+  }
 }
