edits to about and portfolio

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -19,6 +19,11 @@
   #about-block {
     vertical-align: middle;
 
+    a {
+      text-decoration: underline;
+      font-weight: 700;
+    }
+
 
     img {
       border-radius: 25%;
