--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -10,6 +10,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-style: none;
     text-align: left;
+    line-height: 1.3em;
   }
 
   .divider {
